--- a/public/bower.json
+++ b/public/bower.json
@@ -23,10 +23,7 @@
     "angular-local-storage": "^0.2.2",
     "angular-animate": "^1.4.3",
     "ng-file-upload": "~7.2.1",
-    "lodash": "^2.4.1"
-  },
-  "devDependencies": {
-    "angular-mocks": "git+https://source.dmc.de/gitlab/bower/angular-mocks.git#v1.4.3",
+    "lodash": "^2.4.1",
     "angular-cookies": "~1.4.5"
   },
   "license": "MIT"
